--- a/src/app/shared/header-image/header-image.component.html
+++ b/src/app/shared/header-image/header-image.component.html
@@ -9,5 +9,6 @@
           <a mat-raised-button routerLink="/about">{{ 'NAV.ABOUT_US' | translate }}</a>
           <a mat-raised-button routerLink="/contact">{{ 'NAV.CONTACT' | translate }}</a>      
         </div>
+        <!-- <button routerLink="/property-filter">Search</button> -->
     </div>
   </div>
