--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,7 +25,7 @@
                       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </button>
               </mat-form-field> 
-              <mat-slide-toggle formControlName="rememberMe" class="my-2">Keep me signed in</mat-slide-toggle>
+              <!-- <mat-slide-toggle formControlName="rememberMe" class="my-2">Keep me signed in</mat-slide-toggle> -->
               <div class="text-center mt-2"> 
                   <button mat-raised-button color="accent" class="uppercase" type="submit">
                       Sign to My Account
@@ -36,7 +36,7 @@
                   <h3 class="text-muted ws-nowrap fw-500 p-2">or Sign in with one click</h3>                       
                   <div class="divider w-100"></div>
               </div>  
-              <div class="text-center py-3">
+              <!-- <div class="text-center py-3">
                   <button mat-mini-fab color="primary" matTooltip="Facebook" type="button">
                     <svg class="mat-icon" viewBox="0 0 24 24">
                         <path d="M17,2V2H17V6H15C14.31,6 14,6.81 14,7.5V10H14L17,10V14H14V22H10V14H7V10H10V6A4,4 0 0,1 14,2H17Z" />
@@ -52,7 +52,7 @@
                         <path d="M21.35,11.1H12.18V13.83H18.69C18.36,17.64 15.19,19.27 12.19,19.27C8.36,19.27 5,16.25 5,12C5,7.9 8.2,4.73 12.2,4.73C15.29,4.73 17.1,6.7 17.1,6.7L19,4.72C19,4.72 16.56,2 12.1,2C6.42,2 2.03,6.8 2.03,12C2.03,17.05 6.16,22 12.25,22C17.6,22 21.5,18.33 21.5,12.91C21.5,11.76 21.35,11.1 21.35,11.1V11.1Z" />
                     </svg>
                   </button> 
-              </div>     
+              </div>      -->
           </form>
           <mat-card-actions fxLayoutAlign="end center">
             <button mat-button>
