--- a/src/app/theme/components/footer/footer.component.html
+++ b/src/app/theme/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="px-3">
         <div class="theme-container">
 
-            <div fxLayout="column" fxLayout.gt-sm="row wrap" fxLayoutAlign.gt-sm="center center" class="content border-lighter py-5">
+            <!-- <div fxLayout="column" fxLayout.gt-sm="row wrap" fxLayoutAlign.gt-sm="center center" class="content border-lighter py-5">
                 <div fxFlex="100" fxFlex.gt-sm="40" fxLayout="column" fxLayoutAlign="center center"> 
                     <h2 class="uppercase">Subscribe our Newsletter</h2>
                     <p class="desc mb-1">Stay up to date with our latest news and properties</p>
@@ -16,7 +16,7 @@
                         <button mat-flat-button type="submit" class="subscribe-btn" color="primary">Subscribe</button>
                     </form>
                 </div> 
-            </div>
+            </div> -->
 
             <div class="py-5 content border-lighter">
 
