--- a/src/app/theme/components/user-menu/user-menu.component.html
+++ b/src/app/theme/components/user-menu/user-menu.component.html
@@ -50,7 +50,7 @@
             <span>{{ 'HELP' | translate }}</span> 
         </a> -->
         <div class="divider"></div>
-        <a mat-menu-item routerLink="/">
+        <a mat-menu-item (click)="logout()">
             <mat-icon class="mat-icon-sm">power_settings_new</mat-icon>
             <span>{{ 'LOGOUT' | translate }}</span>
         </a>
