--- a/src/app/theme/components/toolbar1/toolbar1.component.html
+++ b/src/app/theme/components/toolbar1/toolbar1.component.html
@@ -1,25 +1,25 @@
-<mat-toolbar id="top-toolbar" class="top-toolbar">
+<!-- <mat-toolbar id="top-toolbar" class="top-toolbar">
   <div class="theme-container " fxLayout="row" fxLayoutAlign="space-between center">
-    <!-- <div fxLayout="row" fxLayoutAlign="start center">
+    <div fxLayout="row" fxLayoutAlign="start center">
       <span fxHide="false" fxHide.gt-sm>
         <button mat-button (click)="sidenavToggle()">
           <mat-icon class="mat-icon-md m-0">menu</mat-icon>
         </button> 
       </span>
       <app-contacts fxLayout="row" fxLayoutAlign="start center" fxShow="false" fxShow.gt-sm></app-contacts>         
-    </div> -->
+    </div>
     <app-social-icons fxLayout="row" fxLayoutAlign="start center" fxShow="false" fxShow.gt-md></app-social-icons>
     <div fxLayout="row" fxLayoutAlign="end center" class="">
-      <!-- <app-currency></app-currency>
-      <app-lang></app-lang> -->
+      <app-currency></app-currency>
+      <app-lang></app-lang>
       <app-user-menu></app-user-menu>
     </div>
   </div>
-</mat-toolbar>
+</mat-toolbar> -->
 <mat-toolbar id="main-toolbar" class="mat-elevation-z2">
   <div class="theme-container ct_height_46" fxLayout="row" fxLayoutAlign="space-between center">
     <a class="logo" routerLink="/home"><app-logo></app-logo></a>
-    <div fxShow="false" fxShow.gt-sm class="horizontal-menu">
+    <div fxShow="false" fxShow.gt-sm class="horizontal-menu d-block">
       <app-horizontal-menu [menuParentId]="0"></app-horizontal-menu>
     </div>
     <div fxLayout="row" fxLayoutAlign="start center">
@@ -34,6 +34,7 @@
                     matBadgeColor="warn"
                     aria-hidden="false">compare_arrows</mat-icon>
       </a>       -->
+     
       <a routerLink="/submit-property" mat-mini-fab color="primary" fxHide="false"
         fxHide.gt-xs><mat-icon>add</mat-icon></a>
       <a routerLink="/submit-property" mat-raised-button color="primary" fxShow="false" fxShow.gt-xs
